--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^14.2.15",
+    "@next/eslint-plugin-next": "14.2.35",
     "@types/fabric": "^5.3.10",
     "@types/qrcode": "^1.5.6",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "fabric": "^6.9.0",
     "lucide-react": "^0.556.0",
-    "next": "14.2.15",
+    "next": "14.2.35",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
