--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "14.2.35",
     "@types/fabric": "^5.3.10",
     "@types/nodemailer": "^7.0.4",
     "@types/qrcode": "^1.5.6",
@@ -25,6 +24,7 @@
     "sharp": "^0.33.2"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^16.1.1",
     "@types/node": "^22.9.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
